fix image overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -349,6 +349,7 @@ button {
 
   .bred-page-image {
     position: absolute;
+    overflow: hidden;
     width: 200%;
     z-index: 1;
   }
